--- a/Project1 - Binary to Decimal/index.html
+++ b/Project1 - Binary to Decimal/index.html
@@ -5,78 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Project 1 - Binary to Decimal</title>
 
-        <style>
-            @import url('https://fonts.googleapis.com/css2?family=Jersey+15&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Oxygen:wght@300;400;700&display=swap');
-
-            html, body {
-                height: 100vh;
-            }
-
-            body {
-                display: flex;
-
-                background-color: lightblue;
-
-                align-items: center;
-                justify-content: center;
-
-                flex-direction: column;
-            }
-
-            label {
-                font-family: "Jersey 15", sans-serif;
-                font-style: normal;
-                font-weight: 400;
-                font-size: 1.5em;
-                
-                color: #066868;
-
-                margin-bottom: 5px;
-            }
-
-            #ConvertorINPUT {
-                font-family: "Jersey 15", sans-serif;
-                font-style: normal;
-                font-weight: 400;
-                font-size: 2em;
-
-                padding: 5px 10px;
-
-                border: 2px dotted black;
-                border-radius: 10px;
-                outline: none;
-            }
-
-            #ConvertBTN {
-                font-family: "Jersey 15", sans-serif;
-                font-style: normal;
-                font-weight: 400;
-                font-size: 1.3em;
-
-                color: white;
-                background-color: #097a7a;
-
-                padding: 10px 25px;
-                margin: 20px 0;
-
-                border: 1px solid #054e4e;
-                border-radius: 6px;
-                outline: none;
-            }
-
-            #ResultINPUT {
-                font-family: "Jersey 15", sans-serif;
-                font-style: normal;
-                font-weight: 400;
-                font-size: 2em;
-
-                padding: 5px 10px;
-
-                border: 1px solid black;
-                border-radius: 10px;
-                outline: none;
-            }
-        </style>
+        <link rel="stylesheet" href="style.css">
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     </head>
@@ -91,26 +20,6 @@
         <label>Decimal Number</label>
         <input type="text" id="ResultINPUT" readonly>
 
-        <script>
-            $("#ConvertorINPUT").on("input", function() {
-                var binary = $(this).val();
-
-                if (/[^01]/.test(binary)) {
-                    alert("Please enter only binary numbers (0 or 1).");
-                    $(this).val(binary.replace(/[^01]/g, ''));
-                }
-            })
-
-            $("#ConvertBTN").click(function() {
-                var binary = $("#ConvertorINPUT").val();
-                if (binary === '') {
-                    alert("Please enter a binary number.");
-                    return;
-                }
-
-                var decimal = parseInt(binary, 2);
-                $("#ResultINPUT").val(decimal);
-            });
-        </script>
+        <script src="script.js"></script>
     </body>
 </html>
