--- a/Project2 - Border Radius Previewer/index.html
+++ b/Project2 - Border Radius Previewer/index.html
@@ -5,46 +5,65 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Project 2 - Border Radius Previewer</title>
 
-        <style>
-            @import url('https://fonts.googleapis.com/css2?family=Jersey+15&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Oxygen:wght@300;400;700&display=swap');
-
-            html, body {
-                height: 100vh;
-            }
-
-            body {
-                display: flex;
-
-                background-color: lightblue;
-
-                align-items: center;
-                justify-content: center;
-
-                flex-direction: column;
-            }
-
-            #ApplicableBOX {
-                width: 25%;
-                aspect-ratio: 1/1;
-
-                border: 3px solid #496d79;
-            }
-
-        </style>
-
+        <link rel="stylesheet" href="style.css">
+        
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     </head>
     <body>
-        <div>
-            <div>
-                Top
-            </div>
+        <div id="ConfigsBOX">
+            <table>
+                <tr>
+                    <td>
+                        Top-Left:
+                    </td>
+                    <td>
+                        <input type="number" value="0">
+                        <select id="">
+                            <option value="">px</option>
+                            <option value="">%</option>
+                            <option value="">em</option>
+                            <option value="">rem</option>
+                            <option value="">cm</option>
+                            <option value="">mm</option>
+                            <option value="">in</option>
+                            <option value="">pt</option>
+                            <option value="">pc</option>
+                        </select>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Top-Right:
+                    </td>
+                    <td>
+                        <input type="number">
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Bottom-Left:
+                    </td>
+                    <td>
+                        <input type="number">
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Bottom-Right:
+                    </td>
+                    <td>
+                        <input type="number">
+                    </td>
+                </tr>
+            </table>
         </div>
 
         <div id="ApplicableBOX"></div>
 
-        <script>
-           
-        </script>
+        <div>
+
+        </div>
+
+        <script src="script.js"></script>
     </body>
 </html>
